starting to tweak for bad idea rodeo

--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ sass:
   style: :nested
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           "Millennial"
-description:	       "a Jekyll theme for running a blog or publication"
-author:              "Paul Le"
+title:		           "Bad Idea Rodeo"
+description:	       "A group of friends that occasionally comes up with an interesting idea."
+author:              "Jeremiah Habets"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
